Schema updates (#36)
* schema updates

* turn off sso locally
