# app/server/generated/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
-#   filename:  ../../stanford-policylab/bc2/app/server/schema/openapi.yaml
-#   timestamp: 2024-05-15T21:34:13+00:00
+#   filename:  ../../stanford-policylab/bc2/app/schema/openapi.yaml
+#   timestamp: 2024-05-18T14:07:06+00:00
 
 from __future__ import annotations
 
@@ -55,13 +55,13 @@ class HumanName(BaseModel):
     suffix: Optional[str] = None
 
 
-class MaskedDefendant(BaseModel):
-    defendantId: str
+class MaskedAccused(BaseModel):
+    accusedId: str
     alias: str
 
 
-class Defendant(BaseModel):
-    defendantId: str
+class Accused(BaseModel):
+    accusedId: str
     name: Union[str, HumanName]
     aliases: Optional[List[Union[str, HumanName]]] = None
 
@@ -73,7 +73,7 @@ class Documents(RootModel[Union[DocumentLink, DocumentText]]):
 class RedactionRequest(BaseModel):
     jurisdictionId: str
     caseId: str
-    defendants: List[Defendant] = Field(..., min_length=1)
+    accuseds: List[Accused] = Field(..., min_length=1)
     documents: List[Documents] = Field(..., min_length=1)
     callbackUrl: AnyUrl
 
@@ -83,21 +83,21 @@ class ReviewTimestamps(BaseModel):
     decision: AwareDatetime
 
 
-class ChargingDecision(Enum):
+class FinalChargingDecision(Enum):
     CHARGE = 'CHARGE'
     DECLINE = 'DECLINE'
 
 
 class FinalChargeOutcome(BaseModel):
-    chargingDecision: ChargingDecision = Field(
+    finalChargingDecision: FinalChargingDecision = Field(
         ..., description='The final charging decision.', examples=['CHARGE']
     )
-    chargingDecisionExplanation: Optional[str] = Field(
-        None, examples=['The defendant was caught on camera with the stolen goods.']
+    finalChargingDecisionExplanation: Optional[str] = Field(
+        None, examples=['The accused was caught on camera with the stolen goods.']
     )
 
 
-class ChargingDecision1(Enum):
+class BlindChargingDecision(Enum):
     CHARGE_LIKELY = 'CHARGE_LIKELY'
     CHARGE_MAYBE = 'CHARGE_MAYBE'
     DECLINE_MAYBE = 'DECLINE_MAYBE'
@@ -105,12 +105,16 @@ class ChargingDecision1(Enum):
 
 
 class BlindChargeOutcome(BaseModel):
-    chargingDecision: ChargingDecision1 = Field(..., examples=['CHARGE_LIKELY'])
-    chargingDecisionExplanation: str = Field(
-        ..., examples=['The defendant was caught on camera with the stolen goods.']
+    blindChargingDecision: BlindChargingDecision = Field(
+        ...,
+        description='The likely charging decision after blind review.',
+        examples=['CHARGE_LIKELY'],
+    )
+    blindChargingDecisionExplanation: Optional[str] = Field(
+        None, examples=['The accused was caught on camera with the stolen goods.']
     )
     additionalEvidence: Optional[str] = Field(
-        None, examples=['The defendant has a history of theft.']
+        None, examples=['The accused has a history of theft.']
     )
     outcomeType: Literal['CHARGE']
 
@@ -174,8 +178,8 @@ class ReviewDecision(RootModel[Union[BlindReviewDecision, FinalReviewDecision]])
 class Exposure(BaseModel):
     jurisdictionId: str
     caseId: str
-    defendantId: str
-    reviewingAttorneyUserId: str
+    accusedId: str
+    reviewingAttorneyMaskedId: str
     documentIds: List[str] = Field(..., min_length=1)
     protocol: ReviewProtocol
 
@@ -183,8 +187,8 @@ class Exposure(BaseModel):
 class Review(BaseModel):
     jurisdictionId: str
     caseId: str
-    defendantId: str
-    reviewingAttorneyUserId: str
+    accusedId: str
+    reviewingAttorneyMaskedId: str
     documentIds: List[str] = Field(..., min_length=1)
     decision: ReviewDecision
     timestamps: ReviewTimestamps
@@ -198,14 +202,14 @@ class BlindReviewInfo(BaseModel):
     jurisdictionId: str
     caseId: str
     blindReviewRequired: bool
-    maskedDefendants: List[MaskedDefendant]
+    maskedAccuseds: List[MaskedAccused]
     redactedDocuments: List[DocumentLink]
 
 
 class RedactionResultSuccess(BaseModel):
     jurisdictionId: str
     caseId: str
-    maskedDefendants: List[MaskedDefendant]
+    maskedAccuseds: List[MaskedAccused]
     inputDocument: DocumentLink
     redactedDocument: DocumentLink
     status: Literal['COMPLETE']
@@ -214,7 +218,7 @@ class RedactionResultSuccess(BaseModel):
 class RedactionResultError(BaseModel):
     jurisdictionId: str
     caseId: str
-    maskedDefendants: List[MaskedDefendant]
+    maskedAccuseds: List[MaskedAccused]
     inputDocument: DocumentLink
     error: str
     status: Literal['ERROR']
@@ -223,7 +227,7 @@ class RedactionResultError(BaseModel):
 class RedactionResultPending(BaseModel):
     jurisdictionId: str
     caseId: str
-    maskedDefendants: List[MaskedDefendant]
+    maskedAccuseds: List[MaskedAccused]
     inputDocument: DocumentLink
     status: Literal['QUEUED', 'PROCESSING']
 
