# app/server/generated/routers/review.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-05-15T21:34:13+00:00
+#   timestamp: 2024-05-18T14:07:06+00:00
 
 from __future__ import annotations
 
@@ -22,7 +22,7 @@ async def get_blind_review_info(
     request: Request,
     jurisdiction_id: str = Path(..., alias='jurisdictionId'),
     case_id: str = Path(..., alias='caseId'),
-    defendant_id: Optional[str] = Query(None, alias='defendantId'),
+    accused_id: Optional[str] = Query(None, alias='accusedId'),
 ) -> Union[BlindReviewInfo, Error]:
     """Get information about blind review for a given case.
 
